==Mariculture 1.7.2 BETA 3==
* Disabling Fishery, even though it says rods are overriden, the rods/fish will act exactly like vanilla
* Fixed recipes using sugar, when they should of been using sugar cane
* Fixed book duplication exploit
* Merged up b, c, d, e fixes for 1.6.4

==Mariculture 1.7.2 BETA 2==
* Vanilla overriding should now work for biomes, fish and fishing rods
* Access Transformers should behave for things like scuba masks and fishing rods
* Fixed the Enchiridion Dependency, now an optional dependency
* Removed Creepers avoiding players holding catfish
* Scuba Gear will last longer
* Natural Gas now only affects players
* Removed random explosions from natural gas
* Fixed Void Bottle rendering
* Fixed pick block on void bottles, tank blocks also are now picked with their contents in tact

==Mariculture 1.7.2 BETA 1==
==== BETA Notes ====
* This is purely for helping me test, I would like to see as many bugs reported as possible except the ones listed here.
* MAJOR: You need to install 'Enchiridion' if you want to keep my books, it's been split to a seperate mod for 'reasons'.
* Custom fluids/recipes for 1.7 with regards to crucible furnace aren't implemented yet, I plan to have all recipes for each machine to be customisable so that's off for now
* Plugins for mods, like tinkers and BOP are not implemented yet
* The screwed up rendering of void bottles is known, and is on the to do list
* Currently disabling the Fishery module can have dire consequences due to the vanilla fishing override, will sort this out later
* The Vanilla Overriding for fish and fishing rods isn't working correctly
* Some of the biomes that I should be overwriting aren't being, due to not giving proper names
* There is a crash when you wear scuba/diving gear underwater
* There's a startup error in the console, about failing to extend enchantment maximum
* Jewelry Enchanting has changed, the book has not yet been updated