@@ -13,3 +13,4 @@
 .project
 .settings/*
 src/api/*
+lib/
