@@ -1,3 +1,3 @@
 minecraft_version=1.7.2
-forge_version=10.12.1.1071
-mod_version=b2
+forge_version=10.12.1.1074
+mod_version=b3
