@@ -14,7 +14,7 @@ import cpw.mods.fml.common.event.FMLPostInitializationEvent;
 import cpw.mods.fml.common.event.FMLPreInitializationEvent;
 import cpw.mods.fml.common.network.NetworkRegistry;
 
-@Mod(modid = "Mariculture", name = "Mariculture", dependencies="after:Enchiridion;after:TConstruct;after:Railcraft;after:ExtrabiomesXL;after:Forestry;after:IC2;after:Thaumcraft;after:BiomesOPlenty;after:AWWayofTime")
+@Mod(modid = "Mariculture", name = "Mariculture", dependencies="after:Enchiridion;after:TConstruct;after:Thaumcraft;after:AWWayofTime")
 public class Mariculture {
 	public static final PacketPipeline packets = new PacketPipeline();
 	public static final String modid = "mariculture";
